--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Shengyao Zhuang"
-  avatar           : "Shengyao_zhuang.jpg"
+  avatar           : "Shengyao_zhuang_2.jpg"
   bio              : "Postdoctoral researcher at CSIRO"
   location         : "Brisbane"
   employer         :
